# up-bank-display

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
app/: layout.tsx  page.tsx
app/api/search/: route.ts
components/: chart.tsx  search-form.tsx
src/: app.py  config.py  main.py  routes.py  test_main.py  test_utils.py  utils.py
src/static/: style.css
src/templates/: index.html
